rust/ffi/zerobus.h

/* Zerobus C FFI Interface */

#ifndef ZEROBUS_H
#define ZEROBUS_H

#pragma once

/* Generated with cbindgen:0.27.0 */

/* Warning: This file is autogenerated by cbindgen. Don't modify this manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

#ifdef __cplusplus
namespace zerobus {
#endif  // __cplusplus

/**
 * Opaque handle for an Arrow Flight stream.
 */
typedef struct CArrowStream {
  uint8_t _private[0];
} CArrowStream;

typedef struct CZerobusSdk {
  uint8_t _private[0];
} CZerobusSdk;

/**
 * Configuration options for Arrow Flight streams.
 *
 * `ipc_compression`: -1 = None, 0 = LZ4_FRAME, 1 = ZSTD
 */
typedef struct CArrowStreamConfigurationOptions {
  uintptr_t max_inflight_batches;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  uint64_t connection_timeout_ms;
  /**
   * -1 = None, 0 = LZ4_FRAME, 1 = ZSTD
   */
  int32_t ipc_compression;
  /**
   * Maximum time in milliseconds to wait during graceful stream close.
   * -1 = None (wait full server duration), 0 = immediate recovery, >0 = wait up to min(this, server_duration).
   */
  int64_t stream_paused_max_wait_time_ms;
} CArrowStreamConfigurationOptions;

typedef struct CResult {
  bool success;
  char *error_message;
  bool is_retryable;
} CResult;

/**
 * A single header key-value pair for C FFI
 */
typedef struct CHeader {
  char *key;
  char *value;
} CHeader;

/**
 * A collection of headers returned from Go callback
 */
typedef struct CHeaders {
  struct CHeader *headers;
  uintptr_t count;
  char *error_message;
} CHeaders;

/**
 * Function pointer type for the headers provider callback
 * The callback should return a CHeaders struct
 * The caller is responsible for freeing the returned CHeaders using zerobus_free_headers
 */
typedef struct CHeaders (*HeadersProviderCallback)(void *user_data);

/**
 * An array of Arrow IPC-encoded batches, returned by `zerobus_arrow_stream_get_unacked_batches`.
 * Must be freed with `zerobus_arrow_free_batch_array`.
 */
typedef struct CArrowBatchArray {
  /**
   * Array of pointers to IPC-encoded batch bytes.
   */
  uint8_t **batches;
  /**
   * Array of byte lengths, one per batch.
   */
  uintptr_t *lengths;
  /**
   * Number of batches.
   */
  uintptr_t count;
} CArrowBatchArray;

/**
 * Opaque handle for an SDK builder. Allocated by `_new`, consumed by
 * `_build`, or dropped by `_free`. Must not be used after either finalizer.
 */
typedef struct CZerobusSdkBuilder {
  uint8_t _private[0];
} CZerobusSdkBuilder;

typedef struct CZerobusStream {
  uint8_t _private[0];
} CZerobusStream;

typedef struct CStreamConfigurationOptions {
  uintptr_t max_inflight_requests;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  int32_t record_type;
  uint64_t stream_paused_max_wait_time_ms;
  bool has_stream_paused_max_wait_time_ms;
  uint64_t callback_max_wait_time_ms;
  bool has_callback_max_wait_time_ms;
} CStreamConfigurationOptions;

/**
 * Represents a single record (either Proto or JSON)
 */
typedef struct CRecord {
  bool is_json;
  uint8_t *data;
  uintptr_t data_len;
} CRecord;

/**
 * Represents an array of records
 */
typedef struct CRecordArray {
  struct CRecord *records;
  uintptr_t len;
} CRecordArray;

/**
 * Holds a table's serialized `DescriptorProto` plus a prepared protobuf
 * encoder built from it. Opaque to C; the concrete type is [`ProtoSchema`].
 */
typedef struct CZerobusProtoSchema {
  uint8_t _private[0];
} CZerobusProtoSchema;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Creates an Arrow Flight stream authenticated with OAuth client credentials.
 *
 * `schema_ipc_bytes` must point to Arrow IPC stream bytes encoding only the schema
 * (write an empty IPC stream with just the schema message).
 */
struct CArrowStream *zerobus_sdk_create_arrow_stream(struct CZerobusSdk *sdk,
                                                     const char *table_name,
                                                     const uint8_t *schema_ipc_bytes,
                                                     uintptr_t schema_ipc_len,
                                                     const char *client_id,
                                                     const char *client_secret,
                                                     const struct CArrowStreamConfigurationOptions *options,
                                                     struct CResult *result);

/**
 * Creates an Arrow Flight stream with a custom headers provider callback.
 *
 * `schema_ipc_bytes` must point to Arrow IPC stream bytes encoding only the schema.
 */
struct CArrowStream *zerobus_sdk_create_arrow_stream_with_headers_provider(struct CZerobusSdk *sdk,
                                                                           const char *table_name,
                                                                           const uint8_t *schema_ipc_bytes,
                                                                           uintptr_t schema_ipc_len,
                                                                           HeadersProviderCallback headers_callback,
                                                                           void *user_data,
                                                                           const struct CArrowStreamConfigurationOptions *options,
                                                                           struct CResult *result);

/**
 * Frees an Arrow Flight stream instance.
 */
void zerobus_arrow_stream_free(struct CArrowStream *stream);

/**
 * Ingests one Arrow RecordBatch supplied as Arrow IPC stream bytes.
 *
 * `ipc_bytes` must be a valid Arrow IPC stream (schema + one record batch).
 * The bytes are deserialised to a RecordBatch internally. Works with all
 * compression settings. Returns the logical offset assigned to this batch, or -1 on error.
 */
int64_t zerobus_arrow_stream_ingest_batch(struct CArrowStream *stream,
                                          const uint8_t *ipc_bytes,
                                          uintptr_t ipc_len,
                                          struct CResult *result);

/**
 * Ingests one Arrow RecordBatch supplied as Arrow IPC stream bytes.
 *
 * Equivalent to `zerobus_arrow_stream_ingest_batch`. Both functions deserialise the IPC
 * bytes to a `RecordBatch` and re-encode with the stream's compression settings, so
 * either works regardless of whether the stream was created with compression.
 * Returns the logical offset assigned to this batch, or -1 on error.
 */
int64_t zerobus_arrow_stream_ingest_batch_via_record_batch(struct CArrowStream *stream,
                                                           const uint8_t *ipc_bytes,
                                                           uintptr_t ipc_len,
                                                           struct CResult *result);

/**
 * Waits until the server acknowledges the batch at the given logical offset.
 */
bool zerobus_arrow_stream_wait_for_offset(struct CArrowStream *stream,
                                          int64_t offset,
                                          struct CResult *result);

/**
 * Flushes all pending batches and waits for their acknowledgment.
 */
bool zerobus_arrow_stream_flush(struct CArrowStream *stream, struct CResult *result);

/**
 * Gracefully closes the stream, flushing all pending batches first.
 */
bool zerobus_arrow_stream_close(struct CArrowStream *stream, struct CResult *result);

/**
 * Returns all unacknowledged batches from a closed or failed stream as Arrow IPC bytes.
 *
 * Each batch is serialized as a self-contained Arrow IPC stream (schema + one batch).
 * The returned array must be freed with `zerobus_arrow_free_batch_array`.
 */
struct CArrowBatchArray zerobus_arrow_stream_get_unacked_batches(struct CArrowStream *stream,
                                                                 struct CResult *result);

/**
 * Frees a `CArrowBatchArray` returned by `zerobus_arrow_stream_get_unacked_batches`.
 */
void zerobus_arrow_free_batch_array(struct CArrowBatchArray array);

/**
 * Returns whether the Arrow stream has been closed.
 */
bool zerobus_arrow_stream_is_closed(struct CArrowStream *stream);

/**
 * Returns the default Arrow stream configuration options.
 */
struct CArrowStreamConfigurationOptions zerobus_arrow_get_default_config(void);

/**
 * Free headers returned from callback
 */
void zerobus_free_headers(struct CHeaders headers);

/**
 * Allocates a new SDK builder. Must be terminated by exactly one of
 * `_build` or `_free`.
 */
struct CZerobusSdkBuilder *zerobus_sdk_builder_new(void);

/**
 * Sets the Zerobus gRPC endpoint URL (required). No-op on null.
 */
void zerobus_sdk_builder_endpoint(struct CZerobusSdkBuilder *builder, const char *value);

/**
 * Sets the Unity Catalog URL. Optional with a custom headers provider.
 * No-op on null.
 */
void zerobus_sdk_builder_unity_catalog_url(struct CZerobusSdkBuilder *builder, const char *value);

/**
 * Overrides the SDK prefix of the `user-agent` header (default
 * `zerobus-sdk-rs/<version>`). Wrappers pass their own identifier here.
 * Null and empty values are no-ops.
 */
void zerobus_sdk_builder_sdk_identifier(struct CZerobusSdkBuilder *builder, const char *value);

/**
 * Appends an application identifier to the `user-agent` header. Wire value
 * becomes `<sdk_identifier> <application_name>`. Null and empty values are
 * no-ops.
 */
void zerobus_sdk_builder_application_name(struct CZerobusSdkBuilder *builder, const char *value);

/**
 * Selects a no-TLS gRPC channel. TLS is on by default.
 */
void zerobus_sdk_builder_disable_tls(struct CZerobusSdkBuilder *builder);

/**
 * Consumes the builder and returns a `CZerobusSdk*`, or NULL on error.
 * Frees the builder on both paths — any further use of the pointer is
 * undefined behavior. Null `builder` writes an error to `result`.
 */
struct CZerobusSdk *zerobus_sdk_builder_build(struct CZerobusSdkBuilder *builder,
                                              struct CResult *result);

/**
 * Drops an unconsumed builder. No-op on null.
 */
void zerobus_sdk_builder_free(struct CZerobusSdkBuilder *builder);

/**
 * Creates a new ZerobusSdk with default user-agent and TLS settings.
 *
 * Retained for ABI back-compat with v1.2.x; new code should use the
 * `zerobus_sdk_builder_*` API. Does not infer TLS state from the endpoint
 * scheme — callers needing a plain-HTTP channel must use the builder API.
 *
 * Returns NULL on error; see `result` for details.
 */
struct CZerobusSdk *zerobus_sdk_new(const char *zerobus_endpoint,
                                    const char *unity_catalog_url,
                                    struct CResult *result);

/**
 * Free the SDK instance
 */
void zerobus_sdk_free(struct CZerobusSdk *sdk);

/**
 * Set whether to use TLS for connections.
 *
 * Deprecated: This function is a no-op. TLS is now controlled via the `TlsConfig`
 * trait passed to the SDK builder. This function is retained for ABI compatibility.
 */
void zerobus_sdk_set_use_tls(struct CZerobusSdk *_sdk, bool _use_tls);

/**
 * Create a stream with OAuth authentication
 * descriptor_proto_bytes: protobuf-encoded DescriptorProto (can be NULL for JSON streams)
 */
struct CZerobusStream *zerobus_sdk_create_stream(struct CZerobusSdk *sdk,
                                                 const char *table_name,
                                                 const uint8_t *descriptor_proto_bytes,
                                                 uintptr_t descriptor_proto_len,
                                                 const char *client_id,
                                                 const char *client_secret,
                                                 const struct CStreamConfigurationOptions *options,
                                                 struct CResult *result);

/**
 * Create a stream with a custom headers provider callback
 * This allows you to provide custom authentication headers via a Go callback function
 */
struct CZerobusStream *zerobus_sdk_create_stream_with_headers_provider(struct CZerobusSdk *sdk,
                                                                       const char *table_name,
                                                                       const uint8_t *descriptor_proto_bytes,
                                                                       uintptr_t descriptor_proto_len,
                                                                       HeadersProviderCallback headers_callback,
                                                                       void *user_data,
                                                                       const struct CStreamConfigurationOptions *options,
                                                                       struct CResult *result);

/**
 * Free a stream instance
 */
void zerobus_stream_free(struct CZerobusStream *stream);

/**
 * Ingest a record (protobuf encoded)
 * Returns the offset directly
 * Returns -1 on error
 */
int64_t zerobus_stream_ingest_proto_record(struct CZerobusStream *stream,
                                           const uint8_t *data,
                                           uintptr_t data_len,
                                           struct CResult *result);

/**
 * Ingest a JSON record
 * Returns the offset directly
 * Returns -1 on error
 */
int64_t zerobus_stream_ingest_json_record(struct CZerobusStream *stream,
                                          const char *json_data,
                                          struct CResult *result);

/**
 * Ingest a batch of protobuf records
 * Returns the offset of the last record in the batch, or -1 on error
 * Returns -2 if batch is empty
 */
int64_t zerobus_stream_ingest_proto_records(struct CZerobusStream *stream,
                                            const uint8_t *const *records,
                                            const uintptr_t *record_lens,
                                            uintptr_t num_records,
                                            struct CResult *result);

/**
 * Ingest a batch of JSON records
 * Returns the offset of the last record in the batch, or -1 on error
 * Returns -2 if batch is empty
 */
int64_t zerobus_stream_ingest_json_records(struct CZerobusStream *stream,
                                           const char *const *json_records,
                                           uintptr_t num_records,
                                           struct CResult *result);

/**
 * Ingest a protobuf record without waiting for the record to be queued (fire-and-forget).
 *
 * Spawns a background task to queue the record and returns immediately.
 * The result only reflects argument validation errors; ingestion errors are silently ignored.
 *
 * # Safety
 * The stream must remain valid until all background tasks spawned by this function complete.
 */
void zerobus_stream_ingest_proto_record_nowait(struct CZerobusStream *stream,
                                               const uint8_t *data,
                                               uintptr_t data_len,
                                               struct CResult *result);

/**
 * Ingest a JSON record without waiting for the record to be queued (fire-and-forget).
 *
 * Spawns a background task to queue the record and returns immediately.
 * The result only reflects argument validation errors; ingestion errors are silently ignored.
 *
 * # Safety
 * The stream must remain valid until all background tasks spawned by this function complete.
 */
void zerobus_stream_ingest_json_record_nowait(struct CZerobusStream *stream,
                                              const char *json_data,
                                              struct CResult *result);

/**
 * Ingest a batch of protobuf records without waiting (fire-and-forget).
 *
 * Copies all record data before spawning the background task, so the caller's
 * memory is safe to release immediately after this function returns.
 *
 * # Safety
 * The stream must remain valid until all background tasks spawned by this function complete.
 */
void zerobus_stream_ingest_proto_records_nowait(struct CZerobusStream *stream,
                                                const uint8_t *const *records,
                                                const uintptr_t *record_lens,
                                                uintptr_t num_records,
                                                struct CResult *result);

/**
 * Ingest a batch of JSON records without waiting (fire-and-forget).
 *
 * Copies all strings before spawning the background task, so the caller's
 * memory is safe to release immediately after this function returns.
 *
 * # Safety
 * The stream must remain valid until all background tasks spawned by this function complete.
 */
void zerobus_stream_ingest_json_records_nowait(struct CZerobusStream *stream,
                                               const char *const *json_records,
                                               uintptr_t num_records,
                                               struct CResult *result);

/**
 * Wait for a specific offset to be acknowledged by the server
 */
bool zerobus_stream_wait_for_offset(struct CZerobusStream *stream,
                                    int64_t offset,
                                    struct CResult *result);

/**
 * Flush all pending records
 */
bool zerobus_stream_flush(struct CZerobusStream *stream, struct CResult *result);

/**
 * Get unacknowledged records from a closed stream
 * Returns a CRecordArray that must be freed with zerobus_free_record_array
 */
struct CRecordArray zerobus_stream_get_unacked_records(struct CZerobusStream *stream,
                                                       struct CResult *result);

/**
 * Free a CRecordArray returned by zerobus_stream_get_unacked_records
 */
void zerobus_free_record_array(struct CRecordArray array);

/**
 * Close the stream gracefully
 */
bool zerobus_stream_close(struct CZerobusStream *stream, struct CResult *result);

/**
 * Free error message string
 */
void zerobus_free_error_message(char *message);

/**
 * Get default stream configuration options
 */
struct CStreamConfigurationOptions zerobus_get_default_config(void);

/**
 * Build a protobuf schema from Unity Catalog table metadata JSON.
 * Returns NULL on error; free with `zerobus_proto_schema_free`.
 */
struct CZerobusProtoSchema *zerobus_proto_schema_from_uc_json(const char *uc_table_json,
                                                              struct CResult *result);

/**
 * Borrow the serialized descriptor bytes. Valid until `zerobus_proto_schema_free`.
 * Pass directly to `zerobus_sdk_create_stream`. Returns NULL on null handle.
 */
const uint8_t *zerobus_proto_schema_descriptor_bytes(const struct CZerobusProtoSchema *schema,
                                                     uintptr_t *out_len);

/**
 * Encode JSON record to protobuf bytes. Unknown keys are ignored.
 *
 * Values follow protobuf's JSON mapping; a few column types need shaping:
 * - DATE/TIMESTAMP/TIMESTAMP_NTZ: integers (days / micros since epoch), not strings.
 * - BINARY: base64-encoded string, not a JSON array of bytes.
 * - DECIMAL: string (e.g. "123.45"), to preserve precision/scale.
 * - VARIANT: a JSON-encoded string (a string whose contents are the variant's JSON).
 * - ARRAY/MAP/STRUCT: JSON array / object / object respectively.
 * - LONG/BIGINT above 2^53: pass as a JSON string, else the value loses
 *   precision as a JSON number.
 *
 * Non-nullable columns are proto2 `required`; a record missing one fails.
 * Returns true on success; caller must free buffer with `zerobus_free_proto_bytes`.
 * On failure `*out_data` is set to NULL and `*out_len` to 0.
 */
bool zerobus_proto_schema_encode_json(const struct CZerobusProtoSchema *schema,
                                      const char *record_json,
                                      uint8_t **out_data,
                                      uintptr_t *out_len,
                                      struct CResult *result);

/**
 * Free a buffer returned by `zerobus_proto_schema_encode_json`.
 */
void zerobus_free_proto_bytes(uint8_t *data, uintptr_t len);

/**
 * Free a handle from `zerobus_proto_schema_from_uc_json`.
 */
void zerobus_proto_schema_free(struct CZerobusProtoSchema *schema);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#ifdef __cplusplus
}  // namespace zerobus
#endif  // __cplusplus

#endif  /* ZEROBUS_H */